[package]
name = "devlog"
version = "1.2.1"
authors = ["Will Daly"]
edition = "2021"
description = "devlog is a command-line tool for tracking your day-to-day software development work."
repository = "https://github.com/wedaly/devlog"
homepage = "https://devlog-cli.org"
readme = "README.md"
keywords = ["task", "todo", "development", "planning", "cli"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT"
exclude = ["docs/*"]

[dependencies]
chrono = "0.4.22"
clap = "3.2"
dirs = "4"
tempfile = "3"
[profile.release]
opt-level = 3
# enable source line debug info
debug = 1

